# Aegis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Sandbox/: Sandbox.cpp
assets/shaders/: FontShader.glsl  Shader.glsl
dependencies/stb_vorbis/: stb_vorbis.c  stb_vorbis.h
include/Aegis/: Aegis.h
src/: Aegis.h  Application.cpp  Application.h  Assert.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Dropdown.cpp  Dropdown.h  Event.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Layer.h  Math.cpp  Math.h  MouseCodes.h  Object.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h  WorkSansFont.h  main.cpp
src/Audio/: AudioPlayer.cpp  AudioPlayer.h  AudioStream.cpp  AudioStream.h  Sound.cpp  Sound.h  SoundEffect.cpp  SoundEffect.h
src/Core/: Application.cpp  Application.h  Event.h  KeyCodes.h  Layer.h  MouseCodes.h  Object.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/Math/: AABB.cpp  AABB.h  Color.h  Interpolation.cpp  Interpolation.h  Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/Renderer/: Camera.cpp  Camera.h  Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h
src/UI/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  Container.cpp  Container.h  Dialog.cpp  Dialog.h  Dropdown.cpp  Dropdown.h  Label.cpp  Label.h  SpinBox.cpp  SpinBox.h  SpriteWidget.cpp  SpriteWidget.h  Text.cpp  Text.h  TextureWidget.cpp  TextureWidget.h  UILayer.cpp  UILayer.h  UIWidget.h  Widget.cpp  Widget.h
src/Utility/: FontManager.cpp  FontManager.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timing.cpp  Timing.h  Utility.cpp  Utility.h
